objects/ServiceTerritory.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Original_Geolocation__c</fullName>
        <label>FSLDemoTools Original Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Original_Name__c</fullName>
        <label>FSLDemoTools Original Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Original_Timezone__c</fullName>
        <label>FSLDemoTools Original Timezone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSLDemoTools_Fields</fullName>
        <active>false</active>
        <errorConditionFormula>OR( ISCHANGED(  FSLDemoTools_Original_Geolocation__Latitude__s  ),ISCHANGED(   FSLDemoTools_Original_Geolocation__Longitude__s   )   , ISCHANGED(  FSLDemoTools_Original_Name__c  )  , ISCHANGED(  FSLDemoTools_Original_Timezone__c  )  )</errorConditionFormula>
        <errorMessage>You can&apos;t edit the FSLDemoTools Master data fields</errorMessage>
    </validationRules>
</CustomObject>